update : fixed bugs with profile picture alignment

--- a/src/app/pages/add-course/add-course.component.css
+++ b/src/app/pages/add-course/add-course.component.css
@@ -26,4 +26,5 @@
 
 .addCourseWrapper{
   float: right; margin-right: 140px;
+  clear:right;
 }
